<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="332dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/muhammad_akmal_ahsan" />

    <TextView
        android:layout_width="226dp"
        android:layout_height="35dp"
        android:text="@string/nama"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/emial"
        android:textStyle="bold"
        android:textSize="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/asal"
        android:textSize="16dp"
        android:textStyle="bold"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/sekolah"
        android:textStyle="bold"
        android:textSize="16dp"/>


    <TextView
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/enjoy"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40dp"
        android:textStyle="bold" />



</LinearLayout>